--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.defer-datasource-initialization=true
 springdoc.api-docs.path=/api-docs
+spring.security.user.name=admin
+spring.security.user.password=admin
+
 
 
